bugfix remotesystem delete

--- a/webclient.feature.nomination/src/main/resources/templates/feature/nomination/nommenu.html
+++ b/webclient.feature.nomination/src/main/resources/templates/feature/nomination/nommenu.html
@@ -25,31 +25,31 @@
 									<div>
 										<tr th:if="${selectedItem == 'todo'}" class="warning">
 											<td>
-												<a href="#">
-													<span th:text="#{nom.menuTreeTodoMonitor}"></span>
+												<a href="/nom/todo">
+													<span th:text="#{nom.menuTreeToDoMonitor}"></span>
 												</a>
 											</td>
 										</tr>
-										<tr th:if="${selectedItem != 'client'}">
+										<tr th:if="${selectedItem != 'todo'}">
 											<td>
-												<a href="">
+												<a href="/nom/todo">
 													<span th:text="#{nom.menuTreeToDoMonitor}"></span>
 												</a>
 											</td>
 										</tr>
 									</div>
-									<!-- ToDo-Monitor erweitert -Knoten -->
+									<!-- ToDo-Monitor-Extended-Knoten -->
 									<div>
-										<tr th:if="${selectedItem == 'todo-ext'}" class="warning">
+										<tr th:if="${selectedItem == 'todo_ext'}" class="warning">
 											<td>
-												<a href="">
+												<a href="/nom/todo_ext">
 													<span th:text="#{nom.menuTreeToDoMonitorExtended}"></span>
 												</a>
 											</td>
 										</tr>
-										<tr th:if="${selectedItem != 'todo-ext'}">
+										<tr th:if="${selectedItem != 'todo_ext'}">
 											<td>
-												<a href="#">
+												<a href="/nom/todo_ext">
 													<span th:text="#{nom.menuTreeToDoMonitorExtended}"></span>
 												</a>
 											</td>
@@ -66,31 +66,31 @@
 									<div>
 										<tr th:if="${selectedItem == 'todo'}" class="warning">
 											<td>
-												<a href="#">
-													<span th:text="#{nom.menuTreeTodoMonitor}"></span>
+												<a href="/nom/todo">
+													<span th:text="#{nom.menuTreeToDoMonitor}"></span>
 												</a>
 											</td>
 										</tr>
-										<tr th:if="${selectedItem != 'client'}">
+										<tr th:if="${selectedItem != 'todo'}">
 											<td>
-												<a href="">
+												<a href="/nom/todo">
 													<span th:text="#{nom.menuTreeToDoMonitor}"></span>
 												</a>
 											</td>
 										</tr>
 									</div>
-									<!-- ToDo-Monitor erweitert -Knoten -->
+									<!-- ToDo-Monitor-Extended-Knoten -->
 									<div>
-										<tr th:if="${selectedItem == 'todo-ext'}" class="warning">
+										<tr th:if="${selectedItem == 'todo_ext'}" class="warning">
 											<td>
-												<a href="">
+												<a href="/nom/todo_ext">
 													<span th:text="#{nom.menuTreeToDoMonitorExtended}"></span>
 												</a>
 											</td>
 										</tr>
-										<tr th:if="${selectedItem != 'todo-ext'}">
+										<tr th:if="${selectedItem != 'todo_ext'}">
 											<td>
-												<a href="#">
+												<a href="/nom/todo_ext">
 													<span th:text="#{nom.menuTreeToDoMonitorExtended}"></span>
 												</a>
 											</td>
@@ -118,14 +118,14 @@
 									<div>
 										<tr th:if="${selectedItem == 'storage'}" class="warning">
 											<td>
-												<a href="#">
+												<a href="/nom/storage">
 													<span th:text="#{nom.menuTreeStorage}"></span>
 												</a>
 											</td>
 										</tr>
 										<tr th:if="${selectedItem != 'storage'}">
 											<td>
-												<a href="#">
+												<a href="/nom/storage">
 													<span th:text="#{nom.menuTreeStorage}"></span>
 												</a>
 											</td>
@@ -135,14 +135,14 @@
 									<div>
 										<tr th:if="${selectedItem == 'contract'}" class="warning">
 											<td>
-												<a href="#">
+												<a href="/nom/contract">
 													<span th:text="#{nom.menuTreeContract}"></span>
 												</a>
 											</td>
 										</tr>
 										<tr th:if="${selectedItem != 'contract'}">
 											<td>
-												<a href="#">
+												<a href="/nom/contract">
 													<span th:text="#{nom.menuTreeContract}"></span>
 												</a>
 											</td>
@@ -160,14 +160,14 @@
 									<div>
 										<tr th:if="${selectedItem == 'storage'}" class="warning">
 											<td>
-												<a href="#">
+												<a href="/nom/storage">
 													<span th:text="#{nom.menuTreeStorage}"></span>
 												</a>
 											</td>
 										</tr>
 										<tr th:if="${selectedItem != 'storage'}">
 											<td>
-												<a href="#">
+												<a href="/nom/storage">
 													<span th:text="#{nom.menuTreeStorage}"></span>
 												</a>
 											</td>
@@ -177,14 +177,14 @@
 									<div>
 										<tr th:if="${selectedItem == 'contract'}" class="warning">
 											<td>
-												<a href="#">
+												<a href="/nom/contract">
 													<span th:text="#{nom.menuTreeContract}"></span>
 												</a>
 											</td>
 										</tr>
 										<tr th:if="${selectedItem != 'contract'}">
 											<td>
-												<a href="#">
+												<a href="/nom/contract">
 													<span th:text="#{nom.menuTreeContract}"></span>
 												</a>
 											</td>
