--- a/webclient.feature.nomination/src/main/resources/templates/feature/nomination/nomination.html
+++ b/webclient.feature.nomination/src/main/resources/templates/feature/nomination/nomination.html
@@ -36,11 +36,12 @@ body {
 
 		<!-- {!begin navigation} -->
 		<div
-			th:include="feature/nomination/nommenu :: navigation('todo-ext', 'monitor')"
+			th:include="feature/nomination/nommenu :: navigation('empty', 'monitor')"
 			id="navigation" class="navigation"></div>
 		<!-- {!end navigation} -->
 
-		<div id="content" class="content"></div>
+		<div id="content" class="content">
+		</div>
 		<!-- /div-->
 	</div>
 </body>
